--- a/widget.html
+++ b/widget.html
@@ -1,42 +1,50 @@
 <div class="scenarios-widget">
-  <!-- Dropdowns for user interaction -->
-
-  <label for="region">Region:</label>
-  <select id="region">
-    <option value="NEU">NEU</option>
-    <option value="MED">MED</option>
-    <option value="WCE">WCE</option>
-    <option value="EEU">EEU</option>
-  </select>
-
-  <label for="dataset">Dataset:</label>
-  <select id="dataset">
-    <option value="CMIP6">CMIP6</option>
-    <option value="CORDEX">CORDEX</option>
-  </select>
-
-  <label for="variable">Variable:</label>
-  <select id="variable">
-    <!-- Options will be populated dynamically -->
-  </select>
-
-  <label for="time_filter">Time Filter:</label>
-  <select id="time_filter">
-    <option value="year">Year</option>
-    <option value="DecFeb">Dec-Feb</option>
-    <option value="MarMay">Mar-May</option>
-    <option value="JunAug">Jun-Aug</option>
-    <option value="SepNov">Sep-Nov</option>
-  </select>
-
-  <label for="timeframe">Timeframe:</label>
-  <select id="timeframe">
-    <option value="2021">2021</option>
-    <option value="2041">2041</option>
-    <option value="2081">2081</option>
-  </select>
-  
-  <!-- Div for the plot -->
+  <div class="scenarios-widget-controls">
+    <label for="region">
+      Region
+      <select id="region">
+        <option value="NEU">NEU</option>
+        <option value="MED">MED</option>
+        <option value="WCE">WCE</option>
+        <option value="EEU">EEU</option>
+      </select>
+    </label>
+    <label for="dataset">
+      Dataset
+      <select id="dataset">
+        <option value="CMIP6">CMIP6</option>
+        <option value="CORDEX">CORDEX</option>
+      </select>
+    </label>
+  </div>
+  <div class="scenarios-widget-controls">
+    <label for="variable">
+      Variable
+      <select id="variable">
+        <!-- Options will be populated dynamically -->
+      </select>
+    </label>
+  </div>
+  <div class="scenarios-widget-controls">
+    <label for="time_filter">
+      Time Filter
+      <select id="time_filter">
+        <option value="year">Year</option>
+        <option value="DecFeb">Dec-Feb</option>
+        <option value="MarMay">Mar-May</option>
+        <option value="JunAug">Jun-Aug</option>
+        <option value="SepNov">Sep-Nov</option>
+      </select>
+    </label>
+    <label for="timeframe">
+      Timeframe
+      <select id="timeframe">
+        <option value="2021">2021</option>
+        <option value="2041">2041</option>
+        <option value="2081">2081</option>
+      </select>
+    </label>
+  </div>
   <div id="plotDiv"></div>
 </div>
 
