Add line breaks to plot titles

--- a/widget.html
+++ b/widget.html
@@ -276,7 +276,7 @@
     margin: {l: 50, r: 50, t: 50, b: 50},
     plot_bgcolor: 'white',
     paper_bgcolor: 'white',
-    title: `Projected changes ${dataset} in ${region} for ${variableFullName} during ${timeFilter} between ${timeframe}-${+timeframe + 19}`,
+    title: `Projected changes ${dataset} in ${region} for ${variableFullName}<br>during ${timeFilter} between ${timeframe}-${+timeframe + 19}`,
     xaxis: {
         title: xAxisTitle,
         range: x_range,
@@ -330,7 +330,7 @@
       margin: {l: 20, r: 20, t: 50, b: 50},
       plot_bgcolor: 'white',
       paper_bgcolor: 'white',
-      title: `Projected changes ${dataset} in ${region} for ${variableFullName} during ${timeFilter} between ${timeframe}-${+timeframe + 19}`
+      title: `Projected changes ${dataset} in ${region} for ${variableFullName}<br>during ${timeFilter} between ${timeframe}-${+timeframe + 19}`
     };
   
     const annotation = {
